kubernetes/manifests/sentinel/discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord
  namespace: sentinel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      containers:
        - name: discord
          image: ghcr.io/gaucho-racing/sentinel-discord:latest
          ports:
            - containerPort: 9998
---
apiVersion: v1
kind: Service
metadata:
  name: discord
  namespace: sentinel
spec:
  selector:
    app: discord
  ports:
    - port: 9998
      targetPort: 9998
